Update Calculator.java